terraform/security.tf
resource "aws_security_group" "web" {

  name        = "${var.project_name}-web-sg"
  description = "Allows inbound web traffic and SSH access to the Pulse CI EC2 instance."
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-web-security-group"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [var.ssh_allowed_ip]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
